@@ -358,7 +358,7 @@ private extension FullScreenCommentReplyViewController {
     /// Determine if suggestions are enabled and visible for this site
     var shouldShowSuggestions: Bool {
         guard let siteID = self.siteID, let blog = SuggestionService.shared.persistedBlog(for: siteID) else { return false }
-        return SuggestionService.shared.shouldShowSuggestionsOf(type: .mention, for: blog)
+        return SuggestionService.shared.shouldShowSuggestions(for: blog)
     }
 
     // This should be moved elsewhere
