@@ -3,6 +3,6 @@ import Foundation
 @objc public extension ReaderCommentsViewController {
     func shouldShowSuggestions(for siteID: NSNumber?) -> Bool {
         guard let siteID = siteID, let blog = SuggestionService.shared.persistedBlog(for: siteID) else { return false }
-        return SuggestionService.shared.shouldShowSuggestionsOf(type: .mention, for: blog)
+        return SuggestionService.shared.shouldShowSuggestions(for: blog)
     }
 }
